--- a/README
+++ b/README
@@ -8,6 +8,7 @@
 - **Fecha de Nacimiento:** 1992
 - **Ubicación:** San Rafael, Mendoza, Argentina
 - **Profesión:** Desarrollador Full Stack
+- **Estado Civil:** Casado (Sin hijos)
 
 ---
 
@@ -22,10 +23,11 @@ Desarrollador Full Stack con experiencia en frontend y backend, apasionado por c
 <p>
     <img src="./img/Logos/platzi.png" alt="Platzi" width="120" height="50"/> 
     <img src="./img/Logos/ats.png" alt="ATS" width="50"/> 
-    <img src="./img/Logos/digital house.png" alt="Digital House" width="50"/> 
+    <img src="./img/Logos/digital house.png" alt="Digital House" height="40" width="110"/> 
     <img src="./img/Logos/globant.png" alt="Globant" width="50"/> 
     <img src="./img/Logos/mercadoLibre.png" alt="Mercado Libre" width="50"/> 
     <img src="./img/Logos/udemy.png" alt="Udemy" width="120" height="50"/>
+     <img src="./img/Logos/utn.png" alt="Udemy" width="120" height="40"/>
 </p>
 > Avalado por las firmas: **Digital House** | **Globant** | **Mercado Libre**
 
@@ -151,10 +153,10 @@ Junio 2023
 ## Contacto
 **Luciano Gabriel Greco**  
 **Full Stack Developer**  
-[LinkedIn](https://www.linkedin.com/in/luchogrecodevelopers) | [Formacion](https://github.com/LucianoGreco/formacion-academica) | [GitHub](https://github.com/LucianoGreco)
-
+[LinkedIn](https://www.linkedin.com/in/luchogrecodevelopers) | [Formacion](https://github.com/LucianoGreco/formacion-academica) | [GitHub](https://github.com/LucianoGreco) |
+[Gmail](grecolucianogabriel@gmailcom)
 ---
 
 ## Idiomas  
 - Español: Nativo  
-- Inglés: Avanzado  
+- Inglés: 1 año (2024)
